fix back button not working on mobile / adjust paddings on the buttons on detail page

--- a/src/assets/stylesheets/Details.css
+++ b/src/assets/stylesheets/Details.css
@@ -25,8 +25,8 @@
   border: none;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
-  padding: 20px 25px;
-  padding-bottom: 12px;
+  padding: 19px 25px;
+  padding-bottom: 9px;
   color: white;
   font-size: 25px;
 }
@@ -71,7 +71,7 @@
 
 .home-reserve-btn {
   margin-top: 50px;
-  padding: 20px;
+  padding: 15px;
   width: 160px;
   border: none;
   background-color: cornflowerblue;
@@ -79,6 +79,7 @@
   font-size: 18px;
   border-radius: 50px;
   justify-content: space-between;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
@@ -105,6 +106,7 @@
     border-bottom-left-radius: 50%;
     border-top-left-radius: 50%;
     position: fixed;
+    z-index: 100;
   }
 
   .info {
